default/objects/Common_log__b/Common_log__b.object-meta.xml
<CustomObject>
    <description>big object to store logs</description>
    <label>Log</label>
    <pluralLabel>Logs</pluralLabel>
</CustomObject>