default/objects/Common_log__b/fields/Created_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Created_DateTime__c</fullName>
    <description>Created datetime of the archived log with readable format</description>
    <inlineHelpText>Created datetime of the archived log with readable format</inlineHelpText>
    <label>Created DateTime</label>
    <type>DateTime</type>
</CustomField>