default/objects/Common_log__b/fields/E2E_Form_Ru_Data__c.field-meta.xml
<CustomField>
    <fullName>E2E_Form_Ru_Data__c</fullName>
    <label>E2E Form Ru Data</label>
    <referenceTo>E2EFormData__c</referenceTo>
    <relationshipLabel>Archived logs</relationshipLabel>
    <relationshipName>Archived_logs</relationshipName>
    <type>Lookup</type>
</CustomField>