default/objects/Common_log__b/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>log content</description>
    <inlineHelpText>log content</inlineHelpText>
    <label>Message</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>