default/objects/Common_log__b/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>business process name or source of the log</description>
    <inlineHelpText>business process name or source of the log</inlineHelpText>
    <label>Type</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>