default/objects/Common_log__b/fields/Unix_time__c.field-meta.xml
<CustomField>
    <fullName>Unix_time__c</fullName>
    <description>unix created datetime of the archived log</description>
    <inlineHelpText>unix created datetime of the archived log</inlineHelpText>
    <label>Unix time</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>